[gd_scene load_steps=19 format=4 uid="uid://b4ibul8trsdxp"]

[ext_resource type="TileSet" uid="uid://b28wt3clfv7r5" path="res://tileSet/main.tres" id="1_vsgir"]
[ext_resource type="TileSet" uid="uid://cpgm7lx3s4mq1" path="res://tileSet/mainrindrina.tres" id="2_edm8l"]
[ext_resource type="TileSet" uid="uid://cktq8ve4v8qdi" path="res://tileSet/maintable.tres" id="3_vvf25"]
[ext_resource type="TileSet" uid="uid://b4xad1qn384h" path="res://tileSet/mainfrigo.tres" id="4_4nnh1"]
[ext_resource type="Texture2D" uid="uid://k5cm6xxvgkiy" path="res://assets/vilany/vilany@3x.png" id="5_dqft3"]
[ext_resource type="PackedScene" uid="uid://cm5wvdlbk0r34" path="res://player/player.tscn" id="5_i21vl"]
[ext_resource type="Script" path="res://script/player.gd" id="6_xyh4m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8oici"]
size = Vector2(43, 629)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m6eq6"]
size = Vector2(42, 627)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7uyj0"]
size = Vector2(200.5, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_40t0q"]
size = Vector2(437.25, 42)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vj1uk"]
size = Vector2(291, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrdxo"]
size = Vector2(342, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ajrl"]
size = Vector2(52, 39)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j8cog"]
size = Vector2(50, 39)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lolmb"]
radius = 24.0
height = 58.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f3ypa"]
radius = 22.0
height = 58.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k4wgj"]
radius = 23.0
height = 58.0

[node name="Main" type="Node2D"]
position = Vector2(183, 300)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(14, 0)
tile_map_data = PackedByteArray("AAAHAAQAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAAAAQAAAAAAAAAHAP//AQAAAAAAAAAHAP7/AQAAAAAAAAAHAP3/AQAAAAAAAAAHAPz/AQAAAAAAAAAGAAQAAQAAAAAAAAAGAAMAAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAAAAQAAAAAAAAAGAP//AQAAAAAAAAAGAP7/AQAAAAAAAAAGAP3/AQAAAAAAAAAGAPz/AQAAAAAAAAAFAAQAAQAAAAAAAAAFAAMAAQAAAAAAAAAFAAIAAQAAAAAAAAAFAAEAAQAAAAAAAAAFAAAAAQAAAAAAAAAFAP//AQAAAAAAAAAFAP7/AQAAAAAAAAAFAP3/AQAAAAAAAAAFAPz/AQAAAAAAAAAEAAQAAQAAAAAAAAAEAAMAAQAAAAAAAAAEAAIAAQAAAAAAAAAEAAEAAQAAAAAAAAAEAAAAAQAAAAAAAAAEAP//AQAAAAAAAAAEAP7/AQAAAAAAAAAEAP3/AQAAAAAAAAAEAPz/AQAAAAAAAAADAAQAAQAAAAAAAAADAAMAAQAAAAAAAAADAAIAAQAAAAAAAAADAAEAAQAAAAAAAAADAAAAAQAAAAAAAAADAP//AQAAAAAAAAADAP7/AQAAAAAAAAADAP3/AQAAAAAAAAADAPz/AQAAAAAAAAACAAQAAQAAAAAAAAACAAMAAQAAAAAAAAACAAIAAQAAAAAAAAACAAEAAQAAAAAAAAACAAAAAQAAAAAAAAACAP//AQAAAAAAAAACAP7/AQAAAAAAAAACAP3/AQAAAAAAAAACAPz/AQAAAAAAAAABAAQAAQAAAAAAAAABAAMAAQAAAAAAAAABAAIAAQAAAAAAAAABAAEAAQAAAAAAAAABAAAAAQAAAAAAAAABAP//AQAAAAAAAAABAP7/AQAAAAAAAAABAP3/AQAAAAAAAAABAPz/AQAAAAAAAAAAAAQAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAAAAQAAAAAAAAAAAP//AQAAAAAAAAAAAP7/AQAAAAAAAAAAAP3/AQAAAAAAAAAAAPz/AQAAAAAAAAD//wQAAQAAAAAAAAD//wMAAQAAAAAAAAD//wIAAQAAAAAAAAD//wEAAQAAAAAAAAD//wAAAQAAAAAAAAD/////AQAAAAAAAAD///7/AQAAAAAAAAD///3/AQAAAAAAAAD///z/AQAAAAAAAAD+/wQAAQAAAAAAAAD+/wMAAQAAAAAAAAD+/wIAAQAAAAAAAAD+/wEAAQAAAAAAAAD+/wAAAQAAAAAAAAD+////AQAAAAAAAAD+//7/AQAAAAAAAAD+//3/AQAAAAAAAAD+//z/AQAAAAAAAAD9/wQAAQAAAAAAAAD9/wMAAQAAAAAAAAD9/wIAAQAAAAAAAAD9/wEAAQAAAAAAAAD9/wAAAQAAAAAAAAD9////AQAAAAAAAAD9//7/AQAAAAAAAAD9//3/AQAAAAAAAAD9//z/AQAAAAAAAAD8//r/AQAAAAAAAAD8//v/AQAAAAAAAAD8//z/AQAAAAAAAAD8//3/AQAAAAAAAAD8//7/AQAAAAAAAAD8////AQAAAAAAAAD8/wAAAQAAAAAAAAD8/wEAAQAAAAAAAAD8/wIAAQAAAAAAAAD8/wMAAQAAAAAAAAD8/wQAAQAAAAAAAAD8/wUAAQAAAAAAAAD8/wYAAQAAAAAAAAD9//r/AQAAAAAAAAD9//v/AQAAAAAAAAD9/wUAAQAAAAAAAAD9/wYAAQAAAAAAAAD+//r/AQAAAAAAAAD+//v/AQAAAAAAAAD+/wUAAQAAAAAAAAD+/wYAAQAAAAAAAAD///r/AQAAAAAAAAD///v/AQAAAAAAAAD//wUAAQAAAAAAAAD//wYAAQAAAAAAAAAAAPr/AQAAAAAAAAAAAPv/AQAAAAAAAAAAAAUAAQAAAAAAAAAAAAYAAQAAAAAAAAABAPr/AQAAAAAAAAABAPv/AQAAAAAAAAABAAUAAQAAAAAAAAABAAYAAQAAAAAAAAACAPr/AQAAAAAAAAACAPv/AQAAAAAAAAACAAUAAQAAAAAAAAACAAYAAQAAAAAAAAADAPr/AQAAAAAAAAADAPv/AQAAAAAAAAADAAUAAQAAAAAAAAADAAYAAQAAAAAAAAAEAPr/AQAAAAAAAAAEAPv/AQAAAAAAAAAEAAUAAQAAAAAAAAAEAAYAAQAAAAAAAAAFAPr/AQAAAAAAAAAFAPv/AQAAAAAAAAAFAAUAAQAAAAAAAAAFAAYAAQAAAAAAAAAGAPr/AQAAAAAAAAAGAPv/AQAAAAAAAAAGAAUAAQAAAAAAAAAGAAYAAQAAAAAAAAAHAPr/AQAAAAAAAAAHAPv/AQAAAAAAAAAHAAUAAQAAAAAAAAAHAAYAAQAAAAAAAAAIAPr/AQAAAAAAAAAIAPv/AQAAAAAAAAAIAPz/AQAAAAAAAAAIAP3/AQAAAAAAAAAIAP7/AQAAAAAAAAAIAP//AQAAAAAAAAAIAAAAAQAAAAAAAAAIAAEAAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAQAAQAAAAAAAAAIAAUAAQAAAAAAAAAIAAYAAQAAAAAAAAAJAPr/AQAAAAAAAAAJAPv/AQAAAAAAAAAJAPz/AQAAAAAAAAAJAP3/AQAAAAAAAAAJAP7/AQAAAAAAAAAJAP//AQAAAAAAAAAJAAAAAQAAAAAAAAAJAAEAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAQAAQAAAAAAAAAJAAUAAQAAAAAAAAAJAAYAAQAAAAAAAAAKAPr/AQAAAAAAAAAKAPv/AQAAAAAAAAAKAPz/AQAAAAAAAAAKAP3/AQAAAAAAAAAKAP7/AQAAAAAAAAAKAP//AQAAAAAAAAAKAAAAAQAAAAAAAAAKAAEAAQAAAAAAAAAKAAIAAQAAAAAAAAAKAAMAAQAAAAAAAAAKAAQAAQAAAAAAAAAKAAUAAQAAAAAAAAAKAAYAAQAAAAAAAAALAPr/AQAAAAAAAAALAPv/AQAAAAAAAAALAPz/AQAAAAAAAAALAP3/AQAAAAAAAAALAP7/AQAAAAAAAAALAP//AQAAAAAAAAALAAAAAQAAAAAAAAALAAEAAQAAAAAAAAALAAIAAQAAAAAAAAALAAMAAQAAAAAAAAALAAQAAQAAAAAAAAALAAUAAQAAAAAAAAALAAYAAQAAAAAAAAA=")
tile_set = ExtResource("1_vsgir")

[node name="plat" type="StaticBody2D" parent="."]
position = Vector2(-157.5, 23.5)

[node name="plat" type="TileMapLayer" parent="plat"]
position = Vector2(171.5, -23.5)
tile_map_data = PackedByteArray("AAD8//r/BgAAAAAAAAD8//v/AAAAAAAAAAD8//z/AAAAAAAAAAD8//3/AAAAAAAAAAD8//7/AAAAAAAAAAD8////AAAAAAAAAAD8/wAAAAAAAAAAAAD8/wEAAAAAAAAAAAD8/wIAAAAAAAAAAAD8/wMAAAAAAAAAAAD8/wQAAAAAAAAAAAD8/wUAAAAAAAAAAAD8/wYABwAAAAAAAAD9//r/AQAAAAAAAAD9/wYAAgAAAAAAAAD+//r/AQAAAAAAAAD+/wYAAgAAAAAAAAD///r/AQAAAAAAAAD//wYAAgAAAAAAAAAAAPr/AQAAAAAAAAAAAAYAAgAAAAAAAAABAPr/AQAAAAAAAAABAAYAAgAAAAAAAAACAAYAAgAAAAAAAAADAAYAAgAAAAAAAAAEAAYAAgAAAAAAAAAFAPr/AQAAAAAAAAAGAPr/AQAAAAAAAAAHAPr/AQAAAAAAAAAIAPr/AQAAAAAAAAAIAAYAAgAAAAAAAAAJAPr/AQAAAAAAAAAJAAYAAgAAAAAAAAAKAPr/AQAAAAAAAAAKAAYAAgAAAAAAAAALAPr/BQAAAAAAAAALAPv/AwAAAAAAAAALAPz/AwAAAAAAAAALAP3/AwAAAAAAAAALAP7/AwAAAAAAAAALAP//CAAAAAAAAAALAAAAAwAAAAAAAAALAAEACAAAAAAAAAALAAIAAwAAAAAAAAALAAMACAAAAAAAAAALAAQAAwAAAAAAAAALAAUAAwAAAAAAAAALAAYABAAAAAAAAAADAPr/CQAAAAAAAAA=")
tile_set = ExtResource("3_vvf25")

[node name="CollisionShape2D" type="CollisionShape2D" parent="plat"]
shape = SubResource("RectangleShape2D_8oici")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="plat"]
position = Vector2(742.5, 1)
shape = SubResource("RectangleShape2D_m6eq6")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="plat"]
position = Vector2(671.25, 297.5)
shape = SubResource("RectangleShape2D_7uyj0")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="plat"]
position = Vector2(201.5, 296.5)
shape = SubResource("RectangleShape2D_40t0q")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="plat"]
position = Vector2(127, -292.5)
shape = SubResource("RectangleShape2D_vj1uk")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="plat"]
position = Vector2(591.5, -293.5)
shape = SubResource("RectangleShape2D_rrdxo")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="plat"]
position = Vector2(346.5, -293)
shape = SubResource("RectangleShape2D_7ajrl")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="plat"]
position = Vector2(157.5, -23.5)
polygon = PackedVector2Array(-199, -310, -190, 351, 263, 339, 417, 339, 658, 350, 657, -306, 261, -290, 113, -290, -153, -320, -141, -388, 707, -388, 717, 458, -223, 404, -307, -376)

[node name="frigocoll" type="StaticBody2D" parent="."]

[node name="frigo" type="TileMapLayer" parent="frigocoll"]
position = Vector2(14, 0)
tile_map_data = PackedByteArray("AAAGAAYAAAAAAAAAAAA=")
tile_set = ExtResource("4_4nnh1")

[node name="frigocoll" type="CollisionShape2D" parent="frigocoll"]
position = Vector2(339, 319.5)
shape = SubResource("RectangleShape2D_j8cog")

[node name="rindrina" type="TileMapLayer" parent="."]
position = Vector2(14, 0)
tile_map_data = PackedByteArray("AAD8/wUABgAAAAAAAAD8/wYAAgAAAAAAAAD8/wQABgAAAAAAAAD8/wMABgAAAAAAAAD8/wIABgAAAAAAAAD8/wEABgAAAAAAAAD8/wAABgAAAAAAAAD8////BgAAAAAAAAD8//7/BgAAAAAAAAD8//3/BgAAAAAAAAD8//z/BgAAAAAAAAD8//v/BgAAAAAAAAD9//r/BwAAAAAAAAD+//r/BwAAAAAAAAD///r/BwAAAAAAAAAAAPr/BwAAAAAAAAABAPr/BwAAAAAAAAACAPr/BwAAAAAAAAADAPr/BwAAAAAAAAAEAPr/BwAAAAAAAAAFAPr/BwAAAAAAAAAGAPr/BwAAAAAAAAAHAPr/BwAAAAAAAAAIAPr/BwAAAAAAAAAJAPr/BwAAAAAAAAAKAPr/BwAAAAAAAAALAPv/AAAAAAAAAAALAPz/AAAAAAAAAAALAP3/AAAAAAAAAAALAP7/AAAAAAAAAAALAP//AAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAAKAAYAAQAAAAAAAAAJAAYAAQAAAAAAAAAIAAYAAQAAAAAAAAAHAAYAAQAAAAAAAAAGAAYAAQAAAAAAAAAFAAYAAQAAAAAAAAAEAAYAAQAAAAAAAAADAAYAAQAAAAAAAAACAAYAAQAAAAAAAAABAAYAAQAAAAAAAAAAAAYAAQAAAAAAAAD//wYAAQAAAAAAAAD+/wYAAQAAAAAAAAD9/wYAAQAAAAAAAAALAPr/BQAAAAAAAAALAAYAAwAAAAAAAAD8//r/BAAAAAAAAAA=")
tile_set = ExtResource("2_edm8l")

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
position = Vector2(89, 10)
energy = 0.1

[node name="TileMapLayer2" type="TileMapLayer" parent="."]

[node name="vilany1" type="StaticBody2D" parent="."]

[node name="Vilany1" type="Sprite2D" parent="vilany1"]
position = Vector2(587, -20)
rotation = -1.57229
texture = ExtResource("5_dqft3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="vilany1"]
position = Vector2(586, -24)
shape = SubResource("CapsuleShape2D_lolmb")

[node name="vilany2" type="StaticBody2D" parent="."]

[node name="Vilany2" type="Sprite2D" parent="vilany2"]
position = Vector2(586, 79)
rotation = -1.57229
texture = ExtResource("5_dqft3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="vilany2"]
position = Vector2(584, 76)
shape = SubResource("CapsuleShape2D_f3ypa")

[node name="vilany3" type="StaticBody2D" parent="."]
position = Vector2(1, -2)

[node name="Vilany3" type="Sprite2D" parent="vilany3"]
position = Vector2(585, 181)
rotation = -1.57229
texture = ExtResource("5_dqft3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="vilany3"]
position = Vector2(584, 178)
shape = SubResource("CapsuleShape2D_k4wgj")

[node name="player" parent="." instance=ExtResource("5_i21vl")]
position = Vector2(248, 39)
scale = Vector2(0.25, 0.25)
script = ExtResource("6_xyh4m")
